--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+main a{
+  color: blue;
 }
 
 * {
@@ -21,7 +23,7 @@ p, li{
 .anchor-link {
   opacity: 0;
 }
-h2:hover .anchor-link {
+h2:hover .anchor-link, h3:hover .anchor-link {
   opacity: 1;
 }
 .anchor-link:hover{
@@ -30,6 +32,9 @@ h2:hover .anchor-link {
 .table-of-content li{
   font-size: 1rem;
   list-style: none;
+}
+.table-of-content li a{
+  color: inherit;
 }
 .sidebar-link{
   list-style: none;
@@ -56,4 +61,7 @@ h2:hover .anchor-link {
 }
 .accordation{
   margin-top: -15px;
+}
+h2, h3{
+  margin-bottom: -10px;
 }
