--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-size: 14px;
+
 }
 
 a {
@@ -18,6 +18,10 @@ main a{
 }
 p, li{
   font-size: 1.2rem;
+}
+
+.logo{
+  font-size: 1.6rem;
 }
 
 .anchor-link {
