--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,3 +72,12 @@ h2:hover .anchor-link, h3:hover .anchor-link {
 h2, h3{
   margin-bottom: -10px;
 }
+
+.error-div-sidebar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-error{
+  margin-top: -5px;
+}
