--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,8 +23,10 @@ p, li{
   font-size: 1.2rem;
 }
 
-.logo{
-  font-size: 1.6rem;
+.logo-text{
+  font-size: 1.3rem;
+  margin-top: 25px;
+  margin-left: 5px;
 }
 
 .anchor-link {
