--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,7 +79,7 @@ h2:hover .anchor-link, h3:hover .anchor-link {
 .accordation{
   margin-top: -15px;
 }
-h2, h3{
+h2, h3, sup{
   margin-bottom: -10px;
   scroll-margin-top: 60px;
 }
