--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,18 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-family: "Nunito", sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+.intro-text {
+  margin-top: -20px;
+  font-size: 1.3rem;
+}
+
 main a {
   color: rgb(113, 113, 230);
 }
@@ -159,4 +165,15 @@ sup {
   height: 100%;
   width: 100%;
   position: absolute;
+}
+.heading {
+  font-size: 3rem;
+}
+.center-text {
+  text-align: center;
+}
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
